--- a/BulletinBoardApp/BulletinBoard/BulletinBoard/Base.lproj/Main.storyboard
+++ b/BulletinBoardApp/BulletinBoard/BulletinBoard/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
                                 </constraints>
                                 <state key="normal" title="View Message"/>
                                 <connections>
-                                    <segue destination="5u9-Ji-LnT" kind="show" id="dbW-wa-njl"/>
+                                    <action selector="viewDetails:" destination="o45-CF-77O" eventType="touchUpInside" id="4e7-lt-dVa"/>
                                 </connections>
                             </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MIu-iT-y81">
@@ -215,7 +215,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hFR-vM-k2C">
-                                <rect key="frame" x="527" y="64" width="53" height="30"/>
+                                <rect key="frame" x="527" y="72" width="53" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="53" id="Lds-xK-hRu"/>
                                     <constraint firstAttribute="height" constant="30" id="QLq-Q1-4sV"/>
@@ -230,7 +230,7 @@
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="miX-ej-0BP" secondAttribute="trailing" id="0Rk-fq-BEf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="c07-SV-TGa" secondAttribute="trailing" id="3Ye-Or-3Qf"/>
-                            <constraint firstItem="hFR-vM-k2C" firstAttribute="top" secondItem="oZQ-g9-37Y" secondAttribute="bottom" id="7t1-gR-1IT"/>
+                            <constraint firstItem="hFR-vM-k2C" firstAttribute="top" secondItem="oZQ-g9-37Y" secondAttribute="bottom" constant="8" id="7t1-gR-1IT"/>
                             <constraint firstAttribute="leadingMargin" secondItem="MIu-iT-y81" secondAttribute="leading" id="7ym-VS-wla"/>
                             <constraint firstItem="dvS-vI-NhE" firstAttribute="centerX" secondItem="KVU-0k-ntA" secondAttribute="centerX" id="EWV-cL-VYy"/>
                             <constraint firstItem="MIu-iT-y81" firstAttribute="top" secondItem="oZQ-g9-37Y" secondAttribute="bottom" constant="36" id="KY2-hS-EPj"/>
@@ -337,7 +337,7 @@
         <!--Reply View Controller-->
         <scene sceneID="9Gt-eY-K0G">
             <objects>
-                <viewController id="5u9-Ji-LnT" customClass="ReplyViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="reply" id="5u9-Ji-LnT" customClass="ReplyViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Y6B-Gd-QlS"/>
                         <viewControllerLayoutGuide type="bottom" id="lXI-z2-RuU"/>
@@ -362,12 +362,18 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9y-7v-koa">
                                 <rect key="frame" x="534" y="84" width="46" height="30"/>
                                 <state key="normal" title="up"/>
+                                <connections>
+                                    <action selector="voteUp:" destination="5u9-Ji-LnT" eventType="touchUpInside" id="82r-6R-4a0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E9v-zX-K2V">
                                 <rect key="frame" x="534" y="138" width="46" height="30"/>
                                 <state key="normal" title="down"/>
+                                <connections>
+                                    <action selector="voteDown:" destination="5u9-Ji-LnT" eventType="touchUpInside" id="tGb-rs-BT8"/>
+                                </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="message" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kLo-Tj-9p9">
+                            <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="message" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLo-Tj-9p9">
                                 <rect key="frame" x="20" y="176" width="560" height="64"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -376,22 +382,16 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Coment" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MgE-bS-qBI">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter reply here." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MgE-bS-qBI">
                                 <rect key="frame" x="20" y="264" width="506" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="rdw-eH-GiL"/>
                                 </constraints>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggH-07-RUI">
-                                <rect key="frame" x="534" y="264" width="46" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="D9v-9j-OMo"/>
-                                </constraints>
-                                <state key="normal" title="Reply"/>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wVs-yF-ZgO">
                                 <rect key="frame" x="0.0" y="248" width="600" height="4"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -406,19 +406,67 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S1J-cB-tRS">
-                                <rect key="frame" x="20" y="316" width="560" height="227"/>
+                                <rect key="frame" x="20" y="316" width="560" height="276"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="bMB-bR-Txz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="rCell" id="bMB-bR-Txz" customClass="ReplyTableViewCell">
                                         <rect key="frame" x="0.0" y="28" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bMB-bR-Txz" id="2xV-hW-QMc">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lys-6G-T1R">
+                                                    <rect key="frame" x="8" y="0.0" width="31" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhw-Ni-Aok">
+                                                    <rect key="frame" x="8" y="14" width="494" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F4F-BN-wHS">
+                                                    <rect key="frame" x="510" y="14" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="F4F-BN-wHS" secondAttribute="trailing" id="2AR-Uk-ztl"/>
+                                                <constraint firstItem="Lys-6G-T1R" firstAttribute="top" secondItem="2xV-hW-QMc" secondAttribute="topMargin" constant="-8" id="6xE-jt-so6"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="Jhw-Ni-Aok" secondAttribute="leading" id="Nyb-wa-ZsP"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Jhw-Ni-Aok" secondAttribute="bottom" id="UOT-Ma-E0L"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="Lys-6G-T1R" secondAttribute="leading" id="WTt-sS-b5P"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="F4F-BN-wHS" secondAttribute="bottom" id="qN3-Z7-jcl"/>
+                                                <constraint firstItem="F4F-BN-wHS" firstAttribute="leading" secondItem="Jhw-Ni-Aok" secondAttribute="trailing" constant="8" id="zlR-gh-UIh"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="postedDate" destination="F4F-BN-wHS" id="4xq-ll-iuN"/>
+                                            <outlet property="replyText" destination="Jhw-Ni-Aok" id="fHI-wt-8Fw"/>
+                                            <outlet property="usernameLabel" destination="Lys-6G-T1R" id="cFg-rQ-o3c"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="5u9-Ji-LnT" id="FnD-r3-pAw"/>
+                                    <outlet property="delegate" destination="5u9-Ji-LnT" id="Zty-vH-O1X"/>
+                                </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggH-07-RUI">
+                                <rect key="frame" x="534" y="264" width="46" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="D9v-9j-OMo"/>
+                                </constraints>
+                                <state key="normal" title="Reply"/>
+                                <connections>
+                                    <action selector="reply:" destination="5u9-Ji-LnT" eventType="touchUpInside" id="RqQ-S0-8Kc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -460,18 +508,20 @@
                             <constraint firstItem="wVs-yF-ZgO" firstAttribute="width" secondItem="hPt-C4-P2Q" secondAttribute="width" id="zFl-Oa-4kW"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="LyO-Qe-Q1m"/>
                     <connections>
                         <outlet property="downVoteButton" destination="E9v-zX-K2V" id="5qm-5y-GBt"/>
                         <outlet property="messageText" destination="kLo-Tj-9p9" id="3Wb-us-kFO"/>
                         <outlet property="replyButton" destination="ggH-07-RUI" id="MST-ru-Jhi"/>
                         <outlet property="replyTextArea" destination="MgE-bS-qBI" id="292-Ji-cOX"/>
+                        <outlet property="scoreLabel" destination="EbM-dE-9lt" id="qbr-EU-Ndn"/>
                         <outlet property="upVoteButton" destination="o9y-7v-koa" id="K8U-2g-DeB"/>
                         <outlet property="usernameLabel" destination="Rg4-5X-gqY" id="KaX-2R-NDh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b1i-IO-zWP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2286" y="358"/>
+            <point key="canvasLocation" x="3098" y="358"/>
         </scene>
         <!--Your Messages Table View Controller-->
         <scene sceneID="7lH-z0-V5S">
@@ -1096,6 +1146,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yUK-JN-pIm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="358"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5kU-jK-N7k">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tnt-Ku-Xuq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rG3-xj-668">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5u9-Ji-LnT" kind="relationship" relationship="rootViewController" id="7ei-Gy-EnE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yzG-If-oBS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2286" y="358"/>
         </scene>
     </scenes>
     <resources>
